# box3-assistant

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.local.example
docs/: ask-gpt-design.md  jellyfin-option-1-design.md  refactor-plan.md  timer-stt-design.md  weather-tts-piper-design.md
main/: CMakeLists.txt  Kconfig.projbuild  assistant_command_text.c  assistant_command_text.h  assistant_commands.h  assistant_diagnostics.c  assistant_diagnostics.h  assistant_runtime.h  assistant_state.c  assistant_state.h  board_audio.c  box3_assistant.c  hue-controls.c  hue_client.c  hue_client.h  idf_component.yml  ui_status.c  wifi_support.c  wifi_support.h
main/assistant/: boot.c  boot.h  command_context.h  command_handler.h  command_registry.c  command_registry.h  presence.c  presence.h  session.c  session.h  watchdog.c  watchdog.h
main/assistant/runtime/: audio_runtime.h  command_runtime.h  presence_state.h  session_state.h  watchdog_state.h
main/board/: board_audio.c  board_audio.h  ui_status.c  ui_status.h  ui_status_display.c  ui_status_display.h  ui_status_font.c  ui_status_font.h  ui_status_render.c  ui_status_render.h
main/commands/: assistant_command_dispatch.c  assistant_command_dispatch.h  assistant_command_text.c  assistant_command_text.h  assistant_commands.h
main/hue/: hue_client.c  hue_client.h  hue_command_handler.c  hue_command_handler.h  hue_command_map.c  hue_command_map.h  hue_command_runtime.c  hue_command_runtime.h  hue_discovery_response.c  hue_discovery_response.h  hue_group.h  hue_group_store.c  hue_group_store.h
main/net/: http_trace.c  http_trace.h  line_socket.c  line_socket.h  request_cancel.h
main/stt/: local_stt_client.c  local_stt_client.h  local_stt_protocol.c  local_stt_protocol.h
main/system/: time_support.c  time_support.h  wifi_support.c  wifi_support.h
main/timer/: timer_command_handler.c  timer_command_handler.h  timer_parse.c  timer_parse.h  timer_runtime.c  timer_runtime.h
main/tts/: local_tts_client.c  local_tts_client.h  tts_player.c  tts_player.h
main/weather/: weather_client.c  weather_client.h  weather_command_handler.c  weather_command_handler.h  weather_format.c  weather_format.h  weather_open_meteo_provider.c  weather_open_meteo_provider.h  weather_provider.h  weather_types.h
scripts/: format.sh  sync-sdkconfig.sh
tests/: esp_err.h  run_unit_tests.sh  test_assistant_state.c  test_command_dispatch.c  test_command_registry.c  test_command_text.c  test_http_trace.c  test_hue_discovery_response.c  test_local_stt_protocol.c  test_main.c  test_request_cancel.c  test_support.h  test_timer_parse.c  test_timer_runtime.c  test_weather_format.c  unit_tests.c
tests/assistant/: command_handler.h
tests/hue/: hue_command_handler.h
tests/timer/: timer_command_handler.h
tests/weather/: weather_command_handler.h
